syntax = "proto3";

package messenger;

service Messenger {
  rpc SendMessage (MessageRequest) returns (MessageResponse);
  rpc GetMessages (Empty) returns (MessagesResponse);
}

message Empty {}

message MessageRequest {
  string content = 1;
  string sender = 2;
  int64 timestamp = 3;
}

message MessageResponse {
  bool success = 1;
  string id = 2;
}

message StoredMessage {
  string id = 1;
  string content = 2;
  string sender = 3;
  int64 timestamp = 4;
}

message MessagesResponse {
  repeated StoredMessage messages = 1;
}
